ui/src/routes/styles.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

@layer components {
    .app {
        @apply flex h-screen;
    }

    .main {
        @apply flex flex-col flex-1;
    }

    .sidebar {
        @apply w-64 fixed h-full overflow-y-auto bg-gray-800 text-white;
    }

    .nav {
        @apply p-4;
    }

    .nav-item {
        @apply mb-4 block w-full px-4 py-2 text-left
    }

    .topbar {
        @apply h-16 bg-gray-900 text-white flex items-center justify-between px-4;
    }

    .content {
        @apply flex-1 overflow-y-auto pl-64;
    }

    .search {
        @apply flex items-center;
    }

    .card {
        @apply bg-white rounded shadow p-4;
        display: block;
    }

    .card-title {
        @apply font-medium;
    }

    .task-item {
        @apply text-center align-middle;
    }

    .banner {
        @apply w-full h-auto p-4 flex;
    }
}

